@@ -290,6 +290,7 @@ struct c3x_config {
 	bool fix_overlapping_specialist_yield_icons;
 	bool patch_premature_truncation_of_found_paths;
 	bool patch_zero_production_crash;
+	bool patch_ai_can_form_army_without_special_ability;
 	bool patch_ai_can_sacrifice_without_special_ability;
 	bool patch_crash_in_leader_unit_ai;
 
